--- a/src/CareLeavers.Web/Views/_ViewImports.cshtml
+++ b/src/CareLeavers.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using CareLeavers.Web
 @using CareLeavers.Web.Models
+@using Contentful.AspNetCore.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, GovUk.Frontend.AspNetCore
+@addTagHelper *, Contentful.AspNetCore
+@addTagHelper *, CareLeavers.Web
