--- a/src/CareLeavers.Web/Views/_ViewImports.cshtml
+++ b/src/CareLeavers.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using CareLeavers.Web
 @using CareLeavers.Web.Models
 @using Contentful.AspNetCore.TagHelpers
+@using CareLeavers.Web.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, GovUk.Frontend.AspNetCore
 @addTagHelper *, Contentful.AspNetCore
