--- a/src/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg"/>
     @Html.GovUkFrontendStyleImports(appendVersion: true)
     <link rel="stylesheet" href="~/css/dfefrontend.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/application.css" asp-append-version="true"/>
 </head>
 
 <body class="govuk-template__body">
