--- a/src/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -18,6 +18,6 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <contentful-rich-text document="@Model.Content"></contentful-rich-text>
+        <gds-contentful-rich-text document="@Model.Content"></gds-contentful-rich-text>
     </div>
 </div>
