Add basic memory caching use distributed cache API

--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -1,12 +1,12 @@
 
-@* <div class="govuk-width-container"> *@
-@*     <govuk-phase-banner> *@
-@*         <govuk-phase-banner-tag>Beta</govuk-phase-banner-tag> *@
-@*         <span class="govuk-phase-banner__text"> *@
-@*             This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>. *@
-@*         </span> *@
-@*     </govuk-phase-banner> *@
-@* </div> *@
+<div class="govuk-width-container">
+    <govuk-phase-banner>
+        <govuk-phase-banner-tag>Beta</govuk-phase-banner-tag>
+        <span class="govuk-phase-banner__text">
+            This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>.
+        </span>
+    </govuk-phase-banner>
+</div>
 
 <header class="dfe-header" role="banner">
     <div class="dfe-width-container dfe-header__container">
