Add CSP headers to respond to Zap scan

--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -1,8 +1,11 @@
 ﻿@using GovUk.Frontend.AspNetCore
 @using GovUk.Frontend.AspNetCore.TagHelpers
+@using Joonasw.AspNetCore.SecurityHeaders.Csp
+@using Joonasw.AspNetCore.SecurityHeaders.TagHelpers
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject IWebHostEnvironment WebHostEnvironment
+@inject ICspNonceService CspNonceService
 
 <!DOCTYPE html>
 <html class="govuk-template" lang="en">
@@ -11,7 +14,7 @@
     @if (WebHostEnvironment.IsProduction())
     {
         <!-- Google Tag Manager -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        <script asp-add-nonce="true">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
                 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
             j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -36,7 +39,7 @@
                 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 }
-@Html.GovUkFrontendJsEnabledScript()
+@Html.GovUkFrontendJsEnabledScript(CspNonceService.GetNonce())
 <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 @{
     await Html.RenderPartialAsync("_Header");
@@ -73,7 +76,7 @@
 }
 
 @await RenderSectionAsync("Scripts", false)
-@Html.GovUkFrontendScriptImports(null, true)
+@Html.GovUkFrontendScriptImports(CspNonceService.GetNonce(), true)
 </body>
 
 </html>
