--- a/src/web/CareLeavers.Web/Views/_ViewImports.cshtml
+++ b/src/web/CareLeavers.Web/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @addTagHelper *, GovUk.Frontend.AspNetCore
 @addTagHelper *, Contentful.AspNetCore
 @addTagHelper *, CareLeavers.Web
+@addTagHelper *, Joonasw.AspNetCore.SecurityHeaders
