--- a/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Footer.cshtml
@@ -1,3 +1,5 @@
+@model CareLeavers.Web.Models.Content.ContentfulConfigurationEntity
+
 <footer class="govuk-footer " role="contentinfo">
     <div class="govuk-width-container ">
         <div class="govuk-footer__meta">
@@ -6,6 +8,9 @@
                 @{ 
                     // @await Component.InvokeAsync("FooterLinks")
                 }
+                
+                <gds-contentful-rich-text>@Model.Footer</gds-contentful-rich-text>
+                
                 <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo"
                      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
                     <path fill="currentColor"
