--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
     @Html.GovUkFrontendStyleImports(appendVersion: true)
     <link rel="stylesheet" href="~/css/dfefrontend.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/application.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/metadata.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/cta.css" asp-append-version="true"/>
 </head>
 
 <body class="govuk-template__body">
