Render Rich content blocks

--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 <html class="govuk-template" lang="en">
 
 <head>
-    @if (WebHostEnvironment.IsProduction() || 1 == 1)
+    @if (WebHostEnvironment.IsProduction())
     {
         <!-- Google Tag Manager -->
         <script asp-add-nonce="true">
