--- a/src/web/CareLeavers.Web/Views/Shared/Grid/SmallBanner.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/SmallBanner.cshtml
@@ -5,7 +5,7 @@
 <div class="govuk-grid-row split-panel">
     <div class="govuk-grid-column-one-half image-column">
         <a href="@link">
-            <div class="image-container" style="background-image: url('@Model?.Image?.File?.Url');"></div>
+            <contentful-image asset="Model.Image" class="full-width-image" title="@Model.Title"/>
         </a>
     </div>
     <div class="govuk-grid-column-one-half text-column">
