--- a/src/web/CareLeavers.Web/Views/Shared/Grid/Banner.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/Banner.cshtml
@@ -2,18 +2,15 @@
 @{
     string? link = Model?.Link?.Slug ?? string.Empty;
 }
-<style asp-add-nonce="true">
-    #image-container {
-        background-image: url('@Model?.Image?.File?.Url')   
-    }
-    
-</style>
+
 
 <div class="banner-content">
     <div class="govuk-grid-row split-panel">
         <div class="govuk-grid-column-one-half image-column">
             <a href="@link">
-                <div class="image-container" ></div>
+                <div class="image-container" style="background-image: url('@Model?.Image?.File?.Url');">
+                </div>
+
             </a>
         </div>
         <div class="govuk-grid-column-one-half text-column">
