--- a/src/web/CareLeavers.Web/Views/Shared/Grid/SmallBanner.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/SmallBanner.cshtml
@@ -2,10 +2,12 @@
 @{
     string? link = Model?.Link?.Slug ?? string.Empty;
 }
+
+<div class="banner-content">
 <div class="govuk-grid-row split-panel">
     <div class="govuk-grid-column-one-half image-column">
         <a href="@link">
-            <contentful-image asset="Model.Image" class="full-width-image" title="@Model.Title"/>
+            <div class="image-container" style="background-image: url('@Model?.Image?.File?.Url');"></div>
         </a>
     </div>
     <div class="govuk-grid-column-one-half text-column">
@@ -14,4 +16,5 @@
         <p class="govuk-!-margin-bottom-0">
         </p>
     </div>
+</div>
 </div>
