--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         <!-- End Clarity -->
     }
     <!-- Begin ShareThis -->
-    <script type="text/javascript" asp-add-nonce src="https://platform-api.sharethis.com/js/sharethis.js#property=@analyticsOptions.ShareThis&product=inline-share-buttons&source=platform" async="async"></script>
+    <script type="text/javascript" asp-add-nonce="true" src="https://platform-api.sharethis.com/js/sharethis.js#property=@analyticsOptions.ShareThis&product=inline-share-buttons&source=platform" async="async"></script>
     <!-- End ShareThis -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
