--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -53,10 +53,10 @@
     <title>@ViewData["Title"] - @config.ServiceName</title>
     <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg"/>
     @Html.GovUkFrontendStyleImports(appendVersion: true)
-    <link rel="stylesheet" href="~/css/dfefrontend.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/application.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/metadata.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/cta.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/dfefrontend.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="stylesheet" href="~/css/application.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="stylesheet" href="~/css/metadata.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    <link rel="stylesheet" href="~/css/cta.css" asp-append-version="@scriptConfig.AddCssVersion" />
 </head>
 
 <body class="govuk-template__body">
