Add environment banner (similar to DFE Signin) warning about non prod environments

--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
 </head>
 
 <body class="govuk-template__body">
-@if (!WebHostEnvironment.IsDevelopment() && !string.IsNullOrEmpty(scriptConfig.GTM))
+@if (WebHostEnvironment.IsEnvironment("Test") && !string.IsNullOrEmpty(scriptConfig.GTM))
 {
     <!-- Google Tag Manager (noscript) -->
     <noscript>
