--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -12,6 +12,18 @@ $govuk-font-family: 'Inter', sans-serif; // Override govuk font
   font-family: $govuk-font-family; // Override all fonts to match
 }
 
+.environment-banner {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #0b0c0c;
+  background-color: orange
+}
+
+.environment-banner>div {
+  margin: 0 auto;
+  max-width: 1200px
+}
+
 .dfe-page-grey {
   padding-top: 40px;
   padding-bottom: 30px;
