--- a/src/web/CareLeavers.Web/Views/Shared/Grid/SmallBanner.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/SmallBanner.cshtml
@@ -3,7 +3,7 @@
     string? link = Model?.Link?.Slug ?? string.Empty;
 }
 
-<div class="banner-content">
+@* <div class="banner-content"> *@
 <div class="govuk-grid-row split-panel">
     <div class="govuk-grid-column-one-half image-column">
         <a href="@link">
@@ -17,4 +17,4 @@
         </p>
     </div>
 </div>
-</div>
+@* </div> *@
