Add fetched to last updated page

--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -48,7 +48,7 @@
         @if (Model.ShowLastUpdated)
         {
             <hr/>
-            <partial name="_LastUpdated" model="@Model.Sys"/>
+            <partial name="_LastUpdated" model="@Model"/>
         }
         
     </div>
